# lava-grid

./: .gitignore  Cargo.toml  README.md  backend-state.txt  project_state.txt
.qodo/: context.txt
backend/: .gitignore  Cargo.toml  README.md  TODO.txt
backend/program/: Cargo.toml
backend/src/: game.rs  main.rs  rules_dev.rs
backend/src/config/: anti_spam.rs  game.rs  matchmaking.rs  mod.rs
backend/src/entities/: cannonball.rs
backend/src/game/: game_loop.rs  mod.rs  rules_dev.rs  standalone.rs  state.rs  tests.rs  types.rs  utils.rs
backend/src/game/demo/: game_loop.rs  mod.rs  standalone.rs
backend/src/game/entities/: cannonball.rs  mod.rs  player.rs
backend/src/game/grid/: grid.rs  mod.rs
backend/src/game/systems/: mod.rs  movement.rs  render.rs  rules.rs
backend/src/grid/: grid.rs
backend/src/server/: anti_spam.rs  handlers.rs  mod.rs  router.rs  session_utils.rs  state.rs  ws_actor_utils.rs  ws_error.rs
backend/src/server/game_session/: messages.rs  mod.rs  mode_choice.rs  server.rs  session.rs  turn_resolution.rs
backend/src/server/matchmaking/: messages.rs  mod.rs  server.rs  server2.rs  session.rs  types.rs
backend/src/systems/: movement.rs  render.rs  rules.rs
docs/: API.md  ARCHITECTURE.md  COMMENTING_GUIDELINES.md  CONTRIBUTING.md  README.md
frontend/: .env.example  .gitignore  README.md
program/src/: lib.rs
src/: main.rs  rules.rs  rules2.rs  rules_dev.rs  state.rs  tests.rs  types.rs  utils.rs
src/entities/: cannonball.rs  player.rs
src/grid/: grid.rs
src/rules/: cannonball.rs  game.rs  grid.rs  mod.rs  player.rs  (+1 more)
(+7 files in other folders)
