[package]
name = "lava-grid"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-http = "3.11.0"
actix-web = "4.10.2"
actix-web-actors = "4.3.1"
env_logger = "0.11.8"
log = "0.4.27"
program = { path = "./program" }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
urlencoding = "2.1.3"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
